--- a/MeSaynger/src/App.css
+++ b/MeSaynger/src/App.css
@@ -5,8 +5,10 @@
     font-family: 'Lexend', sans-serif;
   }
 body {
-  font-family: 'Lexend', sans-serif;}
-
+  font-family: 'Lexend', sans-serif;
+  /* overflow-y: hidden; 
+  overflow-x: hidden;  */
+}
 h1 {
   font-family: 'Lexend', sans-serif;  font-weight: 700;
   font-size: 36px;
